remove unecessary apiProduct operations
