# pkg/api/v1/types.gen.go
@@ -3,12 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package v1
 
-// ApiProduct defines model for ApiProduct.
-type ApiProduct struct {
-	Description *string `json:"description,omitempty"`
-	Name        string  `json:"name"`
-}
-
 // Error defines model for Error.
 type Error struct {
 	Code    int    `json:"code"`
@@ -23,26 +17,10 @@ type OAuthApplication struct {
 	ClientSecret string  `json:"clientSecret"`
 }
 
-// CreateAPIProductJSONBody defines parameters for CreateAPIProduct.
-type CreateAPIProductJSONBody struct {
-	ApiProduct ApiProduct `json:"apiProduct"`
-}
-
 // CreateOAuthApplicationJSONBody defines parameters for CreateOAuthApplication.
 type CreateOAuthApplicationJSONBody struct {
 	Id string `json:"id"`
 }
 
-// UpdateAppAPIProductsJSONBody defines parameters for UpdateAppAPIProducts.
-type UpdateAppAPIProductsJSONBody struct {
-	ApiProducts []string `json:"apiProducts"`
-}
-
-// CreateAPIProductJSONRequestBody defines body for CreateAPIProduct for application/json ContentType.
-type CreateAPIProductJSONRequestBody CreateAPIProductJSONBody
-
 // CreateOAuthApplicationJSONRequestBody defines body for CreateOAuthApplication for application/json ContentType.
 type CreateOAuthApplicationJSONRequestBody CreateOAuthApplicationJSONBody
-
-// UpdateAppAPIProductsJSONRequestBody defines body for UpdateAppAPIProducts for application/json ContentType.
-type UpdateAppAPIProductsJSONRequestBody UpdateAppAPIProductsJSONBody
